<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_fs</name>
  <version>0.0.0</version>
  <description>The turtlebot3_fs package</description>

  <maintainer email="shrinivasiyengar@live.com">shrini96</maintainer>

  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlebot3_slam</build_depend>
  <build_depend>turtlebot3_gazebo</build_depend>
  
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>turtlebot3_gazebo</build_export_depend>
  <build_export_depend>turtlebot3_slam</build_export_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>turtlebot3_gazebo</exec_depend>
  <exec_depend>turtlebot3_slam</exec_depend>

  <export>
  </export>
</package>
